--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -23,11 +23,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-library-
 
-      - name: Setup Unity
-        uses: game-ci/unity-builder@v2
-        with:
-          unityVersion: 2021.3.16f1  
-
       - name: Build project
         uses: game-ci/unity-builder@v2
         with:
@@ -35,7 +30,4 @@ jobs:
           targetPlatform: StandaloneWindows64   
 
       - name: Upload build artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: build
-          path: build/
+        uses: actions/upload-artifact@
